--- a/1.ipynb
+++ b/1.ipynb
@@ -67,6 +67,99 @@
    "source": [
     "print(\"hello,world\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afd554dc",
+   "metadata": {},
+   "source": [
+    "# 狗的定义（类）\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b923ec7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name,year):\n",
+    "        self.name = name\n",
+    "        self.year = year\n",
+    "    def bark(self):\n",
+    "        print(f\"{self.name} says woof!,and he is {self.year} years old\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2d49b647",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "huipeishan says woof!,and he is 20 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "huipeishan = Dog(\"huipeishan\",20)\n",
+    "huipeishan.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "12d286ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self, name,year,socre,):\n",
+    "        self.name = name\n",
+    "        self.year = year\n",
+    "        self.socre = socre\n",
+    "    def get_information(self):\n",
+    "        print(f\"{self.name} is {self.year} years old and his socre is {self.socre}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a0ba8f2",
+   "metadata": {},
+   "source": [
+    "# 这是一个定义学生的**类**\n",
+    "\n",
+    "dsafsg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6b37a891",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chang is 20 years old and his socre is 100\n",
+      "zhang is 21 years old and his socre is 99\n"
+     ]
+    }
+   ],
+   "source": [
+    "student1 = Student(\"chang\", 20, 100)\n",
+    "student2 = Student(\"zhang\", 21, 99)\n",
+    "student1.get_information()\n",
+    "student2.get_information()"
+   ]
   }
  ],
  "metadata": {
