--- a/latex/1.tex
+++ b/latex/1.tex
@@ -36,6 +36,10 @@ LaTeX is great for producing professional-looking documents, especially those th
 \begin{equation}
     \sum_i F_{i\tau}  r_i + \sum_i f_{i\tau}   r_i = \left( \sum_i \Delta m_i r_i^2 \right) \beta
 \end{equation}
+
+\begin{equation}
+    \oint_L \frac{x}{x^2 + y^2} \, dx -\frac{y}{x^2 + y^2} \, dy
+\end{equation}
 \end{document}
 ```
 
