--- a/md/我们来判断这个级数：.md
+++ b/md/我们来判断这个级数：.md
@@ -83,7 +83,7 @@ $$
 
 将各部分单独看待：
 
-* 第一部分：$\sum_{n=1}^{N} \frac{1}{2n} = \frac{1}{2} \sum_{n=1}^{N} \frac{1}{n}$ 是调和级数，趋向于 $\infty$
+* 第一部分：$$\sum_{n=1}^{N} \frac{1}{2n} = \frac{1}{2} \sum_{n=1}^{N} \frac{1}{n}$$ 是调和级数，趋向于 $\infty$
 * 第二部分：$\sum_{n=1}^{N} \frac{1}{n+1} = \sum_{k=2}^{N+1} \frac{1}{k}$，也是调和级数的一部分
 * 第三部分：$\sum_{n=1}^{N} \frac{1}{2(n+2)} = \frac{1}{2} \sum_{k=3}^{N+2} \frac{1}{k}$
 
